Fix for bug 279878 (Unknown extension function shouldn't stop processing unless called). r=sicking, sr=jst.