extensions/transformiix/source/xpath/nsXFormsXPathEvaluator.h
@@ -88,7 +88,6 @@ private:
         nsresult resolveFunctionCall(nsIAtom* aName, PRInt32 aID,
                                      FunctionCall*& aFunction);
         PRBool caseInsensitiveNameTests();
-        PRBool fcp();
         void SetErrorOffset(PRUint32 aOffset);
 
     private:
